fix right margin on mobile list views

--- a/mapentity/static/mapentity/style.css
+++ b/mapentity/static/mapentity/style.css
@@ -336,7 +336,7 @@ tr.selected-row td {
     flex-grow: 1;
     display: flex;
     flex-direction: column;
-    max-width: calc(100% - 40px);
+    width: 100%;
 }
 
 @media (min-width: 768px) {
